--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/schedule": "^4.0.2",
     "@nestjs/sequelize": "^10.0.1",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
+    "app-root-path": "^3.1.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -44,7 +47,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^11.0.4",
     "@types/jest": "29.5.0",
+    "@types/multer": "^1.4.11",
     "@types/node": "18.15.11",
     "@types/nodemailer": "^6.4.14",
     "@types/supertest": "^2.0.11",
@@ -56,6 +61,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.5.0",
     "prettier": "^2.3.2",
+    "sharp": "^0.33.3",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
