--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,9 @@ services:
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
       - POSTGRES_DB=${DATABASE_NAME}
     restart: always
+
+  redis:
+    image: "redis:latest"
+    ports:
+      - "6379:6379"
+
